[project]
name = "projectml"
version = "0.1.0"
description = ""
authors = [
    {name = "FelipeJunior20",email = "juniorxbox2020@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]

[tool.poetry]
packages = [{include = "projectml", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
